--- a/index.html
+++ b/index.html
@@ -3,34 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>最大化＆閉じる防止ページ</title>
+    <title>警告が増えるページ</title>
     <script>
-        // ウィンドウを最大化
-        function maximizeWindow() {
-            window.moveTo(0, 0);
-            window.resizeTo(screen.availWidth, screen.availHeight);
-        }
-
-        // ユーザーが何か操作したら閉じる警告を有効化
-        function enableUnloadWarning() {
-            window.onbeforeunload = function(event) {
-                return "このページを離れますか？";
-            };
-            // 一度設定したら、イベントリスナーを削除（不要な呼び出しを防ぐ）
-            document.removeEventListener("click", enableUnloadWarning);
-            document.removeEventListener("keydown", enableUnloadWarning);
-        }
-
-        // ページが読み込まれたらウィンドウを最大化
-        window.onload = maximizeWindow;
-
-        // ユーザーの操作を検知して閉じる警告を有効化
-        document.addEventListener("click", enableUnloadWarning);
-        document.addEventListener("keydown", enableUnloadWarning);
+        document.addEventListener("mousemove", function() {
+            alert("警告！マウスを動かしました！");
+        });
     </script>
 </head>
 <body>
-    <h1>このページは最大化され、閉じると警告が出ます</h1>
-    <p>どこかをクリックまたはキーを押すと、×ボタンを押したときに警告が出るようになります。</p>
+    <h1>マウスを動かすと警告が無限に増えます！</h1>
+    <p>※警告を止めるにはページをリロードするか閉じてください。</p>
 </body>
 </html>
